src/components/newsletter/newsletter.module.scss
.newsletter {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 2rem;
  background-color: var(--clr-purple);

  @media screen {
    @media (width > 1024px) {
      display: flex;
      justify-content: space-between;
      flex-direction: row;
      padding: 3rem;
    }
  }
}

.newsletter-description {
  color: var(--clr-white);
  text-align: center;

  h3 {
    font-weight: var(--fw-semibold);
    font-size: var(--fs-600);
    margin: 0;
    font-family: var(--ff-secondary);
  }

  p {
    font-size: var(--fs-200);
    font-weight: var(--fw-light);
    margin: 0;
    margin-top: .5rem;
    line-height: 18px;
  }

  @media screen {
    @media (width > 1024px) {
      text-align: start;
      max-width: 535px;
      // justify-self: center;

      h3 {
        font-weight: var(--fw-semibold);
        font-size: var(--fs-700);
        line-height: 120%;
        letter-spacing: 0%;
      }
    
      p {
        font-size: var(--fs-300);
      }
    }
  }
}


.newsletter-subscribe {
  .newsletter-subscribe-upper {
    display: flex;

    &__input {
      width: 100%;
      height: 42px;
      margin-right: .5rem;
  
      &::placeholder {
        font-size: var(--fs-300);
      }
    }

    .newsletter-btn {
      width: 100%;
      padding: 0 1rem;
      height: 42px;
    }

    @media screen {
      @media (width > 1024px) {
  
        .newsletter-btn {
          max-width: 157px;
          text-transform: uppercase;
        }
  
        &__input {
          width: 233px;
          margin-bottom: 0px;
        }
  
      }
    }
  }



  .newsletter-subscribe-lower {
    display: flex;
    gap: 3px;
    color: white;
    font-size: var(--fs-300);
    margin-top: 8px;

    label {
      margin: 0;
    }
  }
}

